# InsightX

./: .gitignore  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/connectors/: __init__.py
backend/app/connectors/anaplan/: __init__.py  auth.py  client.py  models.py  operations.py
backend/app/connectors/powerbi/: __init__.py  auth.py  client.py  models.py  operations.py
backend/app/llm/: __init__.py  prompts.py  response_parser.py  tool_executor.py  tools.py
backend/app/middleware/: __init__.py  auth.py  logging_middleware.py
backend/app/models/: __init__.py  analytics_log.py  conversation.py  data_cube.py  database.py  error_log.py  usage_metric.py  user.py
backend/app/routers/: admin.py  analytics.py  chat.py  connectors.py  data_cubes.py  health.py
backend/app/schemas/: admin.py  analytics.py  chat.py  connectors.py  data_cubes.py
backend/app/services/: admin_service.py  analytics_service.py  anaplan_service.py  data_cube_service.py  demo_data.py  llm_service.py  powerbi_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(admin)/: layout-client.tsx  layout.tsx
frontend/src/app/(main)/: layout-client.tsx  layout.tsx
frontend/src/lib/: api-client.ts  auth.ts
infra/aks/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml
(+53 files in other folders)
