[project]
name = "jd-financial-analytics-backend"
version = "0.1.0"
description = "JD Financial Analytics & Decision Support Agent - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "msal>=1.31.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
